--- a/David Bowie/David-Bowie.html
+++ b/David Bowie/David-Bowie.html
@@ -22,7 +22,7 @@
             <a href="David-Bowie-Story.html"><b>♥ David Bowie's Story ♥</b> </a><br><br>
         </div>
         <div>
-            <img src="Images/David Bowie/david 2002.JPG" alt="david in 2002"><br>
+            <img src="Images/david 2002.JPG" alt="david in 2002"><br>
             <small id="caption">
                 ♠ This is picture of David Bowie in 2002
             </small>
@@ -31,21 +31,21 @@
         <div> <span>♠ These are some of my favorite songs of him:</span> </div>
 
         <div>☛ Ashes To Ashes </div>
-        <img src="Images/David Bowie/ash to ash.JPG" alt="ash ro ash"><br>
+        <img src="Images/ash to ash.JPG" alt="ash ro ash"><br>
         <audio controls>
             <source src="Audio/Ashes To Ashes.mp3" type="audio/mp3">
         </audio>
         <br><br>
 
         <div>☛ Moonage Daydream (2012 Remaster) </div>
-        <img src="Images/David Bowie/moonage dream.JPG" alt="moonage dream"><br>
+        <img src="Images/moonage dream.JPG" alt="moonage dream"><br>
         <audio controls>
             <source src="Audio/Moonage Daydream (2012 Remaster).mp3" type="audio/mp3">
         </audio>
         <br><br>
 
         <div>☛ China Girl</div>
-        <img src="Images/David Bowie/china girl.JPG" alt="China girl"><br>
+        <img src="Images/china girl.JPG" alt="China girl"><br>
         <audio controls>
             <source src="Audio/David Bowie - China Girl (Official Video).mp3" type="audio/mp3">
         </audio>
