--- a/Museum Candy Project/index.html
+++ b/Museum Candy Project/index.html
@@ -11,21 +11,22 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700" rel="stylesheet">
 
     <!--Bootstrap CSS-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <!--Custom Css-->
     <link rel="stylesheet" href="app.css">
 
     <title>Museum of Candy </title>
-   </head>
+</head>
 
 <body>
-    <nav id="mainNavbar" class="navbar navbar-dark bg-dark navbar-expand-md">
+    <nav id="mainNavbar" class="navbar navbar-dark  navbar-expand-md py-0 fixed-top">
         <a href="#" class="navbar-brand">CANDY</a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        
+
         <div class="collapse navbar-collapse" id="navLinks">
             <ul class="navbar-nav">
                 <li class="nav-item">
@@ -40,14 +41,108 @@
             </ul>
         </div>
     </nav>
-    <!--Optional JavaScript-->
-    <!--jQuery first, the Popper.js, then Bootstrap JS-->
 
+    <section class="container-fluid px-0">
+        <div class="row align-items-center content">
+            <div class="col-lg-6">
+
+                <div id="headingGroup" class="text-white text-center d-none d-lg-block mt-5">
+
+                    <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
+                    <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
+                    <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
+                    <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
+                    <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
+                    <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
+                    <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
+                    <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
+
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <img class="img-fluid" src="Images/hand2.png" alt="">
+            </div>
+        </div>
+    </section>
+    <section class="container-fluid px-0">
+        <div class="row align-items-center content">
+            <div class="col-md-6 order-2 order-md-1">
+                <img src="Images/milk.png" alt="" class="img-fluid">
+            </div>
+
+            <div class="col-md-6 text-center order-1 order-md-2">
+                <div class="row justify-content-center">
+
+                    <div class="col-10 col-lg-8 blurb">
+                        <h2>MUSEUM OF CANDY</h2>
+                <img src="Images/lolli_icon.png" alt="" class="d-none d-lg-inline">
+                <p class="lead">
+                    The MUSEUM OF CHOCOLATE is a special event venue that incorporates the ground floor
+                    and basement of the historic Beaux-Arts building at 217 West Sixth Street in
+                    Downtown Los Angeles. The ground floor, as pictured in our GALLERY,
+                    was once the “Dutch Chocolate Shop,” originally opened in 1914 featuring the largest
+                    installation of Earnest Batchelder handcrafted tiles in the world. </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row align-items-center content">
+            <div class="col-md-6 text-center">
+                <div class="row justify-content-center">
+                    <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+                        <h2>MUSEUM OF CANDY</h2>
+                        <img src="Images/lolli_icon.png" alt="" class="d-none d-lg-inline">
+                        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, iste molestiae
+                            beatae, maiores deserunt
+                            in voluptatibus
+                            aspernatur architecto excepturi delectus soluta? Ipsa, deleniti dolorem hic consequatur
+                            repellat eveniet quidem
+                            voluptate necessitatibus dolorum delectus minus vitae, ut, veritatis sint ipsum magnam
+                            autem nam ex deserunt debitis
+                            eaque ratione! Nobis, quidem assumenda.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <img src="Images/gumball.png" alt="" class="img-fluid">
+            </div>
+        </div>
+        <div class="row align-items-center content">
+            <div class="col-md-6 order-2 order-md-1">
+                <img src="Images/sprinkles.png" alt="" class="img-fluid">
+            </div>
+            <div class="col-md-6 text-center order-1 order-md-2">
+                <div class="row justify-content-center">
+                    <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+                        <h2>MUSEUM OF CANDY</h2>
+                        <img src="Images/lolli_icon.png" alt="" class="d-none d-lg-inline">
+                        <p class="lead"> The MUSEUM OF CHOCOLATE is a special event venue that incorporates the ground floor
+                            and basement of the historic Beaux-Arts building at 217 West Sixth Street in
+                            Downtown Los Angeles. The ground floor, as pictured in our GALLERY,
+                            was once the “Dutch Chocolate Shop,” originally opened in 1914 featuring the largest
+                            installation of Earnest Batchelder handcrafted tiles in the world.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-    crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-    crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
+
+    <script>
+        $(function () {
+            $(document).scroll(function () {
+                var $nav = $("#mainNavbar");
+                $nav.toggleClass("scrolled", $(this).scrollTop() > $nav.height());
+            });
+        });
+    </script>
 </body>
+
 </html>
