update Museum Candy Project

--- a/Museum Candy Project/index.html
+++ b/Museum Candy Project/index.html
@@ -49,13 +49,13 @@
                 <div id="headingGroup" class="text-white text-center d-none d-lg-block mt-5">
 
                     <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
-                    <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
-                    <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
-                    <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
-                    <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
-                    <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
-                    <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
-                    <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
+                        <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
+                            <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
+                                <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
+                                    <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
+                                        <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
+                                            <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
+                                                <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
 
                 </div>
             </div>
@@ -75,13 +75,13 @@
 
                     <div class="col-10 col-lg-8 blurb">
                         <h2>MUSEUM OF CANDY</h2>
-                <img src="Images/lolli_icon.png" alt="" class="d-none d-lg-inline">
-                <p class="lead">
-                    The MUSEUM OF CHOCOLATE is a special event venue that incorporates the ground floor
-                    and basement of the historic Beaux-Arts building at 217 West Sixth Street in
-                    Downtown Los Angeles. The ground floor, as pictured in our GALLERY,
-                    was once the “Dutch Chocolate Shop,” originally opened in 1914 featuring the largest
-                    installation of Earnest Batchelder handcrafted tiles in the world. </p>
+                        <img src="Images/lolli_icon.png" alt="" class="d-none d-lg-inline">
+                        <p class="lead">
+                            The MUSEUM OF CHOCOLATE is a special event venue that incorporates the ground floor
+                            and basement of the historic Beaux-Arts building at 217 West Sixth Street in
+                            Downtown Los Angeles. The ground floor, as pictured in our GALLERY,
+                            was once the “Dutch Chocolate Shop,” originally opened in 1914 featuring the largest
+                            installation of Earnest Batchelder handcrafted tiles in the world. </p>
                     </div>
                 </div>
             </div>
@@ -116,7 +116,8 @@
                     <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
                         <h2>MUSEUM OF CANDY</h2>
                         <img src="Images/lolli_icon.png" alt="" class="d-none d-lg-inline">
-                        <p class="lead"> The MUSEUM OF CHOCOLATE is a special event venue that incorporates the ground floor
+                        <p class="lead"> The MUSEUM OF CHOCOLATE is a special event venue that incorporates the ground
+                            floor
                             and basement of the historic Beaux-Arts building at 217 West Sixth Street in
                             Downtown Los Angeles. The ground floor, as pictured in our GALLERY,
                             was once the “Dutch Chocolate Shop,” originally opened in 1914 featuring the largest
@@ -128,11 +129,14 @@
     </section>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
 
     <script>
